Se agrega driver de postgres y maxcon min con al env

--- a/{{cookiecutter.folder_name}}/.env
+++ b/{{cookiecutter.folder_name}}/.env
@@ -3,5 +3,7 @@ POSTGRES_PORT=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DBNAME=
+POSTGRES_MAXCONNECTIONS=1
+POSTGRES_MINCONNECTIONS=1
 
 MLFLOW_TRACKING_URI=
