Se arreglan las configuraciones de las BDs

--- a/{{cookiecutter.folder_name}}/config/config.yaml
+++ b/{{cookiecutter.folder_name}}/config/config.yaml
@@ -2,12 +2,10 @@ defaults:
   - _self_
   - type@_here_: development
 paths:
-  datasests:
+  datasets:
     root: datasets
     raw: ${.root}/raw
     processed: ${.root}/processed
     final: ${.root}/final
     database: ${.root}/database
-  database:
-    root: database/
 debug: true
