--- a/{{cookiecutter.folder_name}}/config/database/duckdb.yaml
+++ b/{{cookiecutter.folder_name}}/config/database/duckdb.yaml
@@ -1,3 +1,3 @@
 _target_: src.database.connections.DuckDB
 dbname: duckdb.db
-path: duckdb:${paths.database.root}/${.dbname}
+path: duckdb:${paths.datasets.database}/${.dbname}
